build out example layout for 1 page app

--- a/views/navbar.html
+++ b/views/navbar.html
@@ -3,18 +3,12 @@
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Task it</a>
                 </div>
-                <p class="navbar-text navbar-left">signed in as: 
+                <div class="navbar-right">
+                <p class="navbar-text ">signed in as: 
                     <a href="#" class="navbar-link">Michael</a>
                 </p>
-                <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search Task" />
-                    </div>
-                    <button type="submit" class="btn btn-default">Search</button>
-                </form>
-                <button class="btn btn-default navbar-btn navbar-right active">View Task</button>
-                <button class="btn btn-default navbar-btn navbar-right">Calendar</button>
-                 <button class="btn btn-default navbar-btn navbar-right ">Reports</button>
+                </div>
+               
             </div>
         </nav>
 
