--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,81 @@
 body, html {
     height: 100%;
     width: 100%;
+    font-family: 'Lato', sans-serif;  /* Google Fonts */
 }
 
 body {
     padding-top: 70px;          /* padding for nav bar */
+    
 }
+
+/* general use */
+
+.fa-circle{
+    color: red;
+}
+
+/* navbar */
+
+.navbar {
+    background-color: rgba(250,250,250,.9);
+   
+}
+
+/* panels */
+
+/* side panel */
+
+#sidePanel {
+    position: relative;
+    top: 25%;
+    -webkit-transform: translateY(25%);
+    -ms-transform: translateY(25%);
+    transform: translateY(25%);
+}
+
+#viewSelectButtons button {
+    font-size: .9em;
+    padding: .5em;
+    margin: .2em;
+}
+
+/* main panel */
+
+#mainPanel {
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(50%);
+    -ms-transform: translateY(50%);
+    transform: translateY(50%);
+}
+
+
+/* quick add panel */
+
+#quickAdd {
+    border: 1px solid rgba(50,200,250,.4);
+    border-radius: 5px;
+}
+
+#quickAddButtons button {
+    color: rgba(100,100,100,.9);
+}
+
+/* table */
+
+td {
+    font-size: .9em;
+}
+
+td small {
+    font-style: italic;
+    font-size: .8em;
+    font-weight: 200;
+}
+
+td span {
+    color: rgba(50,150,220,1);
+}
+
+
